--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,12 @@ plugins {
 	id 'org.springframework.boot' version '2.7.13'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id 'org.sonarqube' version '3.3'
+
 	// QueryDSL
 	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+
+	// Jacoco
+	id 'jacoco'
 }
 
 group = 'com.example'
@@ -37,6 +41,10 @@ sonarqube {
 	}
 }
 
+jacoco {
+	toolVersion = "0.8.7"
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -46,6 +54,11 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// java.lang.NoClassDefFoundError (javax.annotation.Entity) 대응 코드
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+	// java.lang.NoClassDefFoundError (javax.annotation.Generated) 대응 코드
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 
 	// Spring Batch
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
@@ -59,7 +72,7 @@ dependencies {
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 	//Annotation Processor가 엔티티에 대한 Q타입 클래스를 생성
-	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jpa"
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}"
 }
 
 // QueryDSL
